# OpenRGA

./: .gitignore  CMakeLists.txt  OpenRGAConfig.cmake.in  README.md  README_EN.md  build.sh  make.sh
assets/: pic.md
doc/: dev_log.md  function_api.md
include/: Mat.hpp  Size.hpp  imread.h  resize.h  rga_utils.h  rga_utils.hpp
src/: imread.cpp  resize.cpp  rga_utils.cpp
test/: CMakeLists.txt  MainTest.cpp
